--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "main": "dist/index.js",
   "scripts": {
-    "dev":"nodemon src/index.ts",
-    "build":"tsc"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -15,7 +15,9 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
-    "typescript": "^5.6.2",
     "ws": "^8.18.0"
+  },
+  "dependencies": {
+    "typescript": "^5.6.2"
   }
 }
