--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "node-appwrite": "^14.1.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
+    "typescript": "^5.6.2",
     "ws": "^8.18.0"
-  },
-  "dependencies": {
-    "typescript": "^5.6.2"
   }
 }
