--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node ."
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
